--- a/user-management/src/index.css
+++ b/user-management/src/index.css
@@ -4,8 +4,11 @@
 
 html {
   font-family: sans-serif;
+  font-size: 62.5%;
 }
 
 body {
   margin: 0;
+  background-color: #3f3f3f;
+  font-size: 1.6rem;
 }
