--- a/user-management/src/component/user-list/UserListItem.module.css
+++ b/user-management/src/component/user-list/UserListItem.module.css
@@ -1,3 +1,6 @@
-.user-list-item li {
-    
+.user-list-item {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
 }
